fixed menu alignment

--- a/root/thruk/themes/Classic/stylesheets/thruk_noframes.css
+++ b/root/thruk/themes/Classic/stylesheets/thruk_noframes.css
@@ -14,7 +14,7 @@ div.navbar {
   overflow:auto;
   top: 0px;
   left: 0px;
-  text-align: center;
+  text-align: left;
   overflow-x: hidden;
 }
 
