--- a/root/thruk/themes/Nuvola/stylesheets/Nuvola.css
+++ b/root/thruk/themes/Nuvola/stylesheets/Nuvola.css
@@ -12,6 +12,7 @@
 body.navbar {
   background-color: #C3C7D3;
   border-color: #C3C7D3;
+  text-align: left;
 }
 div.navbar {
   background-color: #C3C7D3;
